# lyris

./: Cargo.toml  LICENSE  README.md
python/: README.md  pyproject.toml
python/src/lyris/: __init__.py
